--- a/src/app/page-skills/page-skills.component.html
+++ b/src/app/page-skills/page-skills.component.html
@@ -35,32 +35,27 @@
             </div>
         </div>
         <div class="frameworks">
-            <div class="heading">Frameworks</div>
+            <div class="heading">Frameworks/Databases</div>
             <div class="icons">
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon1">X</h1>
-                    <label for="icon1"></label>
+                    <img src="assets/png-icons/angular.png" name="angular" alt="Angular">
+                    <label for="angular">Angular</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon2">X</h1>
-                    <label for="icon2"></label>
+                    <img src="assets/png-icons/springboot.png" name="springboot" alt="Springboot">
+                    <label for="springboot">Springboot</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon3">X</h1>
-                    <label for="icon3"></label>
+                    <img src="assets/png-icons/mysql.png" name="mysql" alt="MySQL">
+                    <label for="mysql">MySQL</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon4">X</h1>
-                    <label for="icon4"></label>
+                    <img src="assets/png-icons/postgre.png" name="postgre" alt="PostreSQL">
+                    <label for="postgre">PostreSQL</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon5">X</h1>
-                    <label for="icon5"></label>
+                    <img src="assets/png-icons/sql-server.png" name="sql-server" alt="MS SQL">
+                    <label for="sql-server">MS SQL</label>
                 </div>
             </div>
         </div>
@@ -68,29 +63,32 @@
             <div class="heading">Others</div>
             <div class="icons">
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon1">X</h1>
-                    <label for="icon1"></label>
+                    <img src="assets/png-icons/github.png" name="github" alt="GitHub">
+                    <label for="github">GitHub</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon2">X</h1>
-                    <label for="icon2"></label>
+                    <img src="assets/png-icons/bitbucket.png" name="bitbucket" alt="BitBucket">
+                    <label for="bitbucket">BitBucket</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon3">X</h1>
-                    <label for="icon3"></label>
+                    <img src="assets/png-icons/firebase.png" name="firebase" alt="Firebase">
+                    <label for="firebase">Firebase</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon4">X</h1>
-                    <label for="icon4"></label>
+                    <img src="assets/png-icons/vscode.png" name="vscode" alt="VS code">
+                    <label for="vscode">VS code</label>
                 </div>
                 <div class="icon">
-                    <img src="assets/png-icons/" alt="">
-                    <h1 name="icon5">X</h1>
-                    <label for="icon5"></label>
+                    <img src="assets/png-icons/intellij.png" name="intellij" alt="IntelliJ">
+                    <label for="intellij">IntelliJ</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/photoshop.png" name="photoshop" alt="Photoshop">
+                    <label for="photoshop">Photoshop</label>
+                </div>
+                <div class="icon">
+                    <img src="assets/png-icons/canva.png" name="canva" alt="Canva">
+                    <label for="canva">Canva</label>
                 </div>
             </div>
         </div>
