--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -2,18 +2,66 @@
     <h1>Contact</h1>
     <div class="container">
         <div class="hello-box">
-            <h3>Interesting? let's have conversation. Get in touch and say Hello</h3>
+            <h3>Interesting? let's have conversation.</h3> <h3> Get in touch and say Hello</h3>
             <div class="hello-btn">
                 <a href="mailto:your.email@example.com" target="_blank">
-                    <button type="button" href="mailto:s02295@gmail.com" ><h3>Say hello!</h3></button>
+                    <button type="button" href="mailto:s02295@gmail.com">
+                        <h3>Say hello!</h3>
+                    </button>
                 </a>
             </div>
         </div>
         <div class="social">
-            <div class="icon GitHub">X</div>
-            <div class="icon LinkedIn">X</div>
-            <div class="icon HackerRank">X</div>
+            <div class="icon"><a href="https://github.com/Strangedip" title="GitHub"> <button> <svg
+                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                        </svg></button></a>
+            </div>
+            <div class="icon"><a href="https://www.linkedin.com/in/strangedip/" title="LinkedIn"> <button> <svg
+                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                            <path d="M8 11l0 5" />
+                            <path d="M8 8l0 .01" />
+                            <path d="M12 16l0 -5" />
+                            <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+                        </svg>
+                    </button>
+                </a>
+            </div>
+            <div class="icon"><a href="https://www.hackerrank.com/profile/Strangedip" title="HackerRank"> <button> <svg
+                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M19.875 6.27a2.225 2.225 0 0 1 1.125 1.948v7.284c0 .809 -.443 1.555 -1.158 1.948l-6.75 4.27a2.269 2.269 0 0 1 -2.184 0l-6.75 -4.27a2.225 2.225 0 0 1 -1.158 -1.948v-7.285c0 -.809 .443 -1.554 1.158 -1.947l6.75 -3.98a2.33 2.33 0 0 1 2.25 0l6.75 3.98h-.033z" />
+                            <path d="M10 16v-8m4 0v8" />
+                            <path d="M10 12h4" />
+                        </svg>
+                    </button>
+                </a>
+            </div>
+            <div class="icon"><a href="https://leetcode.com/Strangedip/" title="LeetCode"> <button> <svg
+                            xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
+                            stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M12 13h7.5" />
+                            <path d="M9.424 7.268l4.999 -4.999" />
+                            <path
+                                d="M16.633 16.644l-2.402 2.415a3.189 3.189 0 0 1 -4.524 0l-3.77 -3.787a3.223 3.223 0 0 1 0 -4.544l3.77 -3.787a3.189 3.189 0 0 1 4.524 0l2.302 2.313" />
+                        </svg>
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
-
+    <div class="footer">Made with Freetime & &#x2764; by Strangedip :D</div>
 </div>
