--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -67,8 +67,8 @@ a {
     color: inherit;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    align-items: start;
+    justify-content: flex-end;
+    align-items: flex-start;
     transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     .name{
         padding: 0.5rem 0;
