--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -14,7 +14,7 @@
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 3rem 0;
+    padding: 0 0 1rem 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
@@ -68,7 +68,8 @@
 }
 
 .icon>img {
-    width: 40px;
+    cursor: pointer;
+    width: 36px;
 }
 
 .icon:hover {
