--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -63,5 +63,5 @@
             </div>
         </div>
     </div>
-    <div class="footer">Made with Freetime & &#x2764; by Strangedip :D</div>
+    <div class="footer">Made in Freetime with &#x2764; by Strangedip :D</div>
 </div>
