--- a/src/app/logo-banner/logo-banner.component.scss
+++ b/src/app/logo-banner/logo-banner.component.scss
@@ -6,11 +6,11 @@
     font-family: "Raleway";
     font-family: 'Comfortaa', sans-serif;
     writing-mode: vertical-lr;
-    font-size: 0.8rem;
+    font-size: 60%;
     position: fixed;
     top: 0;
     left: 0;
-    padding: 2rem;
+    padding: 2vw;
     color: #fff;
     cursor: default;
 }
@@ -42,3 +42,4 @@ h1 {
         text-shadow: 0 0 5px #00ADB5, 0 0 10px #00ADB5, 0 0 15px #00ADB5;
     }
 }
+
