--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
 
 .float-container {
-    margin: 3rem auto;
-    // padding: 3rem;
+    font-size: 1rem;
+    margin: 3vw auto;
     text-align: center;
     position: fixed;
     width: 100%;
@@ -18,15 +18,15 @@
 
 .navbar {
     margin: 0px auto;
-    width: 750px;
+    width: 90vw;
+    max-width: fit-content;
     border-radius: 50px;
     box-shadow:
         0px 4px 15px rgba(0, 0, 0, 0.2),
         0px 0px 8px 0px rgba(0, 0, 0, 0.1),
         inset 0px 12px 20px -10px rgba(131, 131, 131, 0.6);
     color: #c0c0c0;
-    // background: transparent;
-    background: rgba(255, 255, 255, 0.03);
+    background: rgba(255, 255, 255, 0.025);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(0, 172, 181, 0.25);
@@ -50,14 +50,14 @@ ul {
 
 li {
     font-family: 'Work Sans', sans-serif;
-    font-size: 1.15rem;
+    font-size: 1.15em;
     list-style: none;
 }
 
 li>a {
     display: block;
     text-decoration: none;
-    padding: 1rem 3rem;
+    padding: 1em 3em;
     color: inherit;
     transition: 0.6s;
     cursor: pointer;
@@ -74,4 +74,22 @@ li>a.active {
     transition: 0.3s;
     color: #ffffff;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
+}
+
+@media screen and (max-width: 900px) {
+    .navbar{
+        width: 80vw;
+    }
+    li{
+        font-size: 1em;
+    }
+    li>a{
+        padding: 1em 2em;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .float-container{
+        display: none;
+    }
 }
