--- a/src/app/page-contact/page-contact.component.scss
+++ b/src/app/page-contact/page-contact.component.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     color: #FFF;
+    font-size: 1rem;
 }
 
 h1 {
@@ -14,33 +15,33 @@ h1 {
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 3rem 0;
+    padding: 0 0 3em 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
 
 .container {
     font-family: "Raleway";
-    padding: 2rem;
+    padding: 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 3em;
 }
 
 .hello-box {
-    font-size: 2rem;
+    font-size: 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 1em;
 }
 
 .hello-btn>a>button {
     font-family: "Raleway";
-    font-size: 1.2rem;
+    font-size: 0.6em;
     font-weight: bolder;
     width: 180px;
     height: 50px;
@@ -86,7 +87,7 @@ h1 {
 
         button {
             cursor: pointer;
-            padding: 1rem;
+            padding: 1em;
             background: none;
             border: 1px solid transparent;
             border-radius: 10px;
@@ -107,7 +108,11 @@ h1 {
         }
     }
 }
+h3{
+    text-align: center;
+}
 .footer{
+    font-size: 1em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: flex-end;
 }
