--- a/src/app/page-intro/page-intro.component.html
+++ b/src/app/page-intro/page-intro.component.html
@@ -10,6 +10,9 @@
             <h1>Sandip Gupta</h1>
         </div>
         <div class="role">
+            <h3>( Strangedip )</h3>
+        </div>
+        <div class="role">
             <h3>Web / Software Developer</h3>
         </div>
     </div>
