--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -1,7 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400';
+
 .main {
     height: calc(100vh - 6px);
-    // width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,7 +14,7 @@ h1 {
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 3rem 0;
+    padding: 0 0 3vw 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
@@ -27,9 +27,12 @@ h1 {
 }
 
 .project {
-    width: 18vw;
-    height: 50vh;
-    margin: 1rem;
+    width: 25vw;
+    max-width: 400px;
+    height: 30vw;
+    min-height: 400px;
+    max-height: 450px;
+    margin: 1vw;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.25);
     color: #c0c0c0;
@@ -37,9 +40,9 @@ h1 {
     backdrop-filter: blur(10px);
     border: 1px solid rgba(0, 172, 181, 0.25);
     transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    // padding: 1rem;
 }
-.img{
+
+.img {
     width: 100%;
     height: 100%;
     background-position: center;
@@ -59,6 +62,7 @@ h1 {
 }
 
 a {
+    font-size: 1vw;
     font-family: "Raleway";
     padding: 1rem;
     height: 100%;
@@ -70,30 +74,65 @@ a {
     justify-content: flex-end;
     align-items: flex-start;
     transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    .name{
-        padding: 0.5rem 0;
-        font-size: 2rem;
+
+    .name {
+        padding-top: 0.4em;
+        font-size: 2em;
     }
-    .desc{
-        font-size: 1.5rem;
+
+    .desc {
+
+        font-size: 1.5em;
+    }
+    .techs{
+        padding-top: 0.5em;
+    }
+    .techs>img {
+        padding: 0 5px;
+        width: 2.5em;
+        min-width: 30px;
     }
 
 }
-.project:hover{
+
+.project:hover {
     color: #00ADB5;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.4), 0 15px 15px rgba(0, 0, 0, 0.3);
     transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: translateY(-5px);
-    .profile{
-        .img{
-            .overlay{
+
+    .profile {
+        .img {
+            .overlay {
                 background-color: rgba(7, 34, 48, 0);
                 transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             }
         }
     }
 }
-.techs>img{
-    padding: 5px;
-    width: 40px;
+
+@media screen and (max-width: 1150px) {
+    .project {
+        width: 28vw;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .main{
+        height: auto;
+        padding: 1rem 0;
+    }
+    .container{
+        flex-direction: column;
+    }
+    .project{
+        width: 75vw;
+        max-width: 600px;
+        height: 40vw;
+        max-height: 600px;
+
+    }
+    a{
+        font-size: 1.2vw;
+    }
 }
