--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -1,5 +1,6 @@
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400';
+
 .main {
-    // width: 70%;
     margin: 0 auto;
     height: calc(100vh - 6px);
     display: flex;
@@ -7,14 +8,16 @@
     justify-content: center;
     align-items: center;
     color: #FFF;
+    font-size: 1rem;
 }
 
 #skill {
+    margin-top: 3em;
     font-family: "Raleway";
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 1rem 0;
+    padding: 0 0 1em 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
@@ -23,12 +26,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .languages,
 .tools,
 .frameworks {
-    margin: 1rem auto;
+    margin: 1.5vw auto;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.3), 0 10px 10px rgba(0, 0, 0, 0.25);
     color: #c0c0c0;
@@ -37,7 +41,7 @@
     backdrop-filter: blur(10px);
     border: 1px solid rgba(0, 172, 181, 0.25);
     transition: box-shadow 0.8s;
-    padding: 1rem;
+    padding: 1em;
 }
 
 .languages>.icons,
@@ -47,13 +51,13 @@
     justify-content: center;
     align-items: center;
     grid-auto-flow: row;
-    padding: 1rem;
-    gap: 1rem;
+    padding: 0.5em 1em;
+    gap: 1em;
 }
 
 .heading {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 .icon {
@@ -62,8 +66,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    padding: 1rem;
+    gap: 1em;
+    padding: 1em 1em 1em 0.5em;
     transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
@@ -74,4 +78,13 @@
 .icon:hover {
     transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: scale(1.1);
+}
+
+@media screen and (max-width: 900px) {
+    .main {
+        font-size: 0.8rem;
+    }
+    .icon>img{
+        width: 4vw;
+    }
 }
