created ham-bar and deployed v1.1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <logo-banner></logo-banner>
 <float-navbar></float-navbar>
+<ham-navbar></ham-navbar>
 <div class="container">
     <svg class="svg-top" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#00ADB5" fill-opacity="1"
