--- a/src/app/float-navbar/float-navbar.component.scss
+++ b/src/app/float-navbar/float-navbar.component.scss
@@ -62,6 +62,11 @@ li>a {
     transition: 0.6s;
     cursor: pointer;
 }
+.inactive {
+    color: #c0c0c0 !important;
+    transition: 0.6s;
+    text-shadow: none !important;
+}
 
 li>a:hover {
     transition: 0.3s;
@@ -70,9 +75,9 @@ li>a:hover {
 
 }
 
-li>a.active {
+.active {
     transition: 0.3s;
-    color: #ffffff;
+    color: #ffffff !important;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
 }
 
@@ -85,11 +90,5 @@ li>a.active {
     }
     li>a{
         padding: 1em 2em;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    .float-container{
-        display: none;
     }
 }
