--- a/src/app/ham-navbar/ham-navbar.component.html
+++ b/src/app/ham-navbar/ham-navbar.component.html
@@ -11,11 +11,20 @@
         <div class="navbar" *ngIf="isNavbarOpen">
             <ul>
                 <li><a id="section-intro-" (click)="scrollTo('section-intro')">Hello</a></li>
-                <li><a id="section-about-" (click)="scrollTo('section-about')">About</a></li>
-                <li><a id="section-skills-" (click)="scrollTo('section-skills')">Skills</a></li>
+                <li><a id="section-about-"  (click)="scrollTo('section-about')">About</a></li>
+                <li><a id="section-skills-"  (click)="scrollTo('section-skills')">Skills</a></li>
                 <li><a id="section-projects-" (click)="scrollTo('section-projects')">Projects</a></li>
                 <li><a id="section-contact-" (click)="scrollTo('section-contact')">Contact</a></li>
             </ul>
         </div>
+        <!-- <div class="navbar" *ngIf="isNavbarOpen">
+            <ul>
+                <li><a id="section-intro-" [class.active]="sectionList.section-intro" (click)="scrollTo('section-intro')">Hello</a></li>
+                <li><a id="section-about-" [class.active]="aboutActive" (click)="scrollTo('section-about')">About</a></li>
+                <li><a id="section-skills-" [class.active]="skillsActive" (click)="scrollTo('section-skills')">Skills</a></li>
+                <li><a id="section-projects-" [class.active]="projectActive" (click)="scrollTo('section-projects')">Projects</a></li>
+                <li><a id="section-contact-" [class.active]="contactActive" (click)="scrollTo('section-contact')">Contact</a></li>
+            </ul>
+        </div> -->
     </div>
 </div>
