--- a/src/app/ham-navbar/ham-navbar.component.scss
+++ b/src/app/ham-navbar/ham-navbar.component.scss
@@ -10,10 +10,6 @@
     width: 100vw;
     transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
 }
-.container.scrolled {
-    transform: translateY(calc(-100vh + 100% + 2vw));
-    transition: transform 0.8s cubic-bezier(0.61, 0.07, 0.16, 0.81);
-}
 
 .ham-bar {
     width: 80%;
@@ -33,18 +29,15 @@
     justify-content: center;
     align-items: center;
 }
-.ham-bar.bottom {
-    box-shadow:
-        0px -3px 15px rgba(0, 0, 0, 0.2),
-        0px 0px 8px 0px rgba(0, 0, 0, 0.1),
-        inset 0px -12px 20px -10px rgba(131, 131, 131, 0.6);
-    transition: box-shadow 0.8s;
-}
 .navbar {
     padding: 0.5em 0;
     color: #c0c0c0;
 }
-
+.hamburger{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 ul {
     display: flex;
     flex-direction: column;
@@ -61,6 +54,7 @@ a {
     text-align: center;
     display: block;
     padding: 3vw 30vw;
+    cursor: pointer;
 }
 .open {
     width: 40px;
@@ -72,7 +66,7 @@ a {
     justify-content: space-between;
 }
 .close{
-    padding: 5px 10px;
+    padding: 10px 10px 0 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,10 +80,10 @@ a {
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
-.inactive {
-    color: #c0c0c0 !important;
+a.inactive {
+    color: #c0c0c0 ;
     transition: 0.6s;
-    text-shadow: none !important;
+    text-shadow: none ;
 }
 
 li>a:hover {
@@ -99,8 +93,8 @@ li>a:hover {
 
 }
 
-.active {
-    // transition: 0.3s;
-    color: #ffffff !important;
-    text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5 !important;
+a.active {
+    transition: 0.3s;
+    color: #ffffff;
+    text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
 }
