--- a/src/app/ham-navbar/ham-navbar.component.scss
+++ b/src/app/ham-navbar/ham-navbar.component.scss
@@ -12,7 +12,7 @@
 }
 
 .ham-bar {
-    width: 80%;
+    width: 85%;
     border-radius: 10px;
     box-shadow:
         0px 2px 10px rgba(0, 0, 0, 0.2),
@@ -79,22 +79,9 @@ a {
     background: #c0c0c0;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
-
-a.inactive {
-    color: #c0c0c0 ;
-    transition: 0.6s;
-    text-shadow: none ;
-}
-
-li>a:hover {
+li>a:hover,li>a:active,li>a:focus {
     // transition: 0.3s;
     color: #ffffff;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
-
 }
 
-a.active {
-    transition: 0.3s;
-    color: #ffffff;
-    text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
-}
