--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="social">
-            <div class="icon"><a href="https://github.com/Strangedip" title="GitHub"> <button> <svg
+            <div class="icon"><a href="https://github.com/Strangedip" title="GitHub" target="_blank"> <button> <svg
                             xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
                             stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
@@ -21,7 +21,7 @@
                                 d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                         </svg></button></a>
             </div>
-            <div class="icon"><a href="https://www.linkedin.com/in/strangedip/" title="LinkedIn"> <button> <svg
+            <div class="icon"><a href="https://www.linkedin.com/in/strangedip/" title="LinkedIn" target="_blank"> <button> <svg
                             xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
                             stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
@@ -35,7 +35,7 @@
                     </button>
                 </a>
             </div>
-            <div class="icon"><a href="https://www.hackerrank.com/profile/Strangedip" title="HackerRank"> <button> <svg
+            <div class="icon"><a href="https://www.hackerrank.com/profile/Strangedip" title="HackerRank" target="_blank"> <button> <svg
                             xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
                             stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
@@ -48,7 +48,7 @@
                     </button>
                 </a>
             </div>
-            <div class="icon"><a href="https://leetcode.com/Strangedip/" title="LeetCode"> <button> <svg
+            <div class="icon"><a href="https://leetcode.com/Strangedip/" title="LeetCode" target="_blank"> <button> <svg
                             xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"
                             stroke-width="1" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round">
