--- a/src/app/page-contact/page-contact.component.html
+++ b/src/app/page-contact/page-contact.component.html
@@ -2,7 +2,7 @@
     <h1>Contact</h1>
     <div class="container">
         <div class="hello-box">
-            <h3>Interesting? let's have conversation.</h3> <h3> Get in touch and say Hello</h3>
+            <h3>Interesting? <br> let's have conversation.</h3> <h3> Get in touch and say Hello!</h3>
             <div class="hello-btn">
                 <a href="mailto:your.email@example.com" target="_blank">
                     <button type="button" href="mailto:s02295@gmail.com">
