--- a/src/app/page-intro-mobile/page-intro-mobile.component.html
+++ b/src/app/page-intro-mobile/page-intro-mobile.component.html
@@ -1,1 +1,19 @@
-<p>page-intro-mobile works!</p>
+<div class="main">
+    <div class="intro">
+        <div class="hello">
+            <h3>Hello world,</h3>
+        </div>
+        <div class="iam">
+            <h3>I am</h3>
+        </div>
+        <div class="name">
+            <h1>Sandip Gupta</h1>
+        </div>
+        <div class="nick">
+            <h3>( Strangedip )</h3>
+        </div>
+        <div class="role">
+            <h3>Software / Web <br> Developer</h3>
+        </div>
+    </div>
+</div>
