--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Public+Sans:ital,wght@0,300;1,300;1,400&family=Signika+Negative&display=swap');
 $color1: #222831;
 $color2: #393E46;
 $color3: #00ADB5;
