--- a/src/app/ham-navbar/ham-navbar.component.html
+++ b/src/app/ham-navbar/ham-navbar.component.html
@@ -1,14 +1,14 @@
 <div class="container">
-    <div class="ham-bar">
-        <div class="hamburger" (click)="toggleNavbar()">
-            <div class="open" *ngIf="!isNavbarOpen">
+    <div class="ham-bar" id="hambar" [ngClass]="{'active':isNavbarClose}">
+        <div class="hamburger"  (click)="toggleNavbar()">
+            <div class="open" *ngIf="!isNavbarClose">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <div class="close" *ngIf="isNavbarOpen">X</div>
+            <div class="close" *ngIf="isNavbarClose">X</div>
         </div>
-        <div class="navbar" *ngIf="isNavbarOpen">
+        <div class="navbar" >
             <ul>
                 <li><a id="section-intro-" (click)="scrollTo('section-intro')">Hello</a></li>
                 <li><a id="section-about-" (click)="scrollTo('section-about')">About</a></li>
@@ -17,14 +17,5 @@
                 <li><a id="section-contact-" (click)="scrollTo('section-contact')">Contact</a></li>
             </ul>
         </div>
-        <!-- <div class="navbar" *ngIf="isNavbarOpen">
-            <ul>
-                <li><a id="section-intro-" [class.active]="sectionList.section-intro" (click)="scrollTo('section-intro')">Hello</a></li>
-                <li><a id="section-about-" [class.active]="aboutActive" (click)="scrollTo('section-about')">About</a></li>
-                <li><a id="section-skills-" [class.active]="skillsActive" (click)="scrollTo('section-skills')">Skills</a></li>
-                <li><a id="section-projects-" [class.active]="projectActive" (click)="scrollTo('section-projects')">Projects</a></li>
-                <li><a id="section-contact-" [class.active]="contactActive" (click)="scrollTo('section-contact')">Contact</a></li>
-            </ul>
-        </div> -->
     </div>
 </div>
