--- a/src/app/ham-navbar/ham-navbar.component.scss
+++ b/src/app/ham-navbar/ham-navbar.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');
-
 .container{
     position: fixed;
     z-index: 999;
@@ -13,24 +11,29 @@
 
 .ham-bar {
     width: 85%;
+    max-height: 42px;
+    overflow-y: hidden;
     border-radius: 10px;
     box-shadow:
         0px 2px 10px rgba(0, 0, 0, 0.2),
         0px 0px 8px 0px rgba(0, 0, 0, 0.1),
-        inset 0px 7px 15px -8px rgba(131, 131, 131, 0.6);
-    background: rgba(255, 255, 255, 0.025);
-    -webkit-backdrop-filter: blur(10px);
+        inset 0px 7px 20px -8px rgba(131, 131, 131, 0.8);
+    background: rgba(0, 172, 181, 0.15);
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(0, 172, 181, 0.25);
+    border: 1px solid rgba(0, 172, 181, 0.5);
     transition: box-shadow 0.8s;
     font-family: 'Work Sans', sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    transition: all 0.5s;
+}
+.active{
+    background: rgba(0, 172, 181, 0.02);
+    max-height: 400px;
+    transition: all 0.5s ease-in-out;
 }
 .navbar {
-    padding: 0.5em 0;
     color: #c0c0c0;
 }
 .hamburger{
@@ -39,6 +42,7 @@
     width: 100%;
 }
 ul {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,40 +50,44 @@ ul {
 }
 
 li {
+    width: 100%;
     list-style: none;
 }
 
 a {
+    display: block;
     font-size: 1.25em;
     text-align: center;
-    display: block;
-    padding: 3vw 30vw;
+    padding: 15px 20vw;
     cursor: pointer;
 }
 .open {
     width: 40px;
     height: 40px;
-    padding: 10px;
+    padding: 0 5px;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 .close{
-    padding: 10px 10px 0 10px;
+    width: 40px;
+    height: 40px;
+    padding: 0 5px;
+    font-size: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #c0c0c0;
-    font-size: 28px;
 }
 .bar {
     height: 2px;
+    margin: 3px;
     border-radius: 10px;
     background: #c0c0c0;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
-li>a:hover,li>a:active,li>a:focus {
+li>a:hover,li>a:active,li>a:focus,.active-sec {
     // transition: 0.3s;
     color: #ffffff;
     text-shadow: 0 0 3px #00ADB5, 0 0 6px #00ADB5, 0 0 9px #00ADB5;
