--- a/src/app/page-about-mobile/page-about-mobile.component.scss
+++ b/src/app/page-about-mobile/page-about-mobile.component.scss
@@ -1,32 +1,80 @@
 .container{
     font-size: 1rem;
+    padding: 80px 0;
     color: aliceblue;
 }
-.tabs{
+
+h1 {
+    font-family: "Raleway";
+    color: #00ADB5;
+    text-align: center;
+    font-weight: 800;
+    padding-bottom: 40px;
+    text-shadow: 2px 2px 2px #072230,
+        2px 4px 3px #00090ea4;
+}
+.alltabs{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    gap: 0.8em;
 }
 
 .tab{
     text-align: center;
     margin: 0px auto;
-    width: 80vw;
-    height: 30px;
-    overflow-y: hidden;
-    border-radius: 5px;
-    box-shadow:
-        0px 4px 15px rgba(0, 0, 0, 0.2),
-        0px 0px 8px 0px rgba(0, 0, 0, 0.1),
-        inset 0px 12px 20px -10px rgba(131, 131, 131, 0.6);
+    width: 80%;
+    max-height: 45px;
+    overflow: hidden;
+    border-radius: 10px;
     color: #c0c0c0;
-    background: rgba(255, 255, 255, 0.025);
+    background: rgba(255, 255, 255, 0.02);
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(0, 172, 181, 0.25);
-    transition: 0.8s;
+    border: 1px solid rgba(0, 172, 181, 0.514);
+    box-shadow: 0 7px 28px rgba(0, 0, 0, 0.3), 0 5px 10px rgba(0, 0, 0, 0.25);
+    transition: all 0.5s;
+
+    .bar{
+        margin: 10px auto 0 auto;
+        background-color: #00ADB5;
+        width: 0;
+        height: 2px;
+        transition: all 0.4s ease-in-out;
+    }
+    .heading{
+        padding: 10px 0;
+        font-family: "Work Sans", sans-serif;
+        font-size: 18px;
+        svg{
+            margin: 0 5px -5px 0;
+        }
+    }
+    .desc{
+        color: #c0c0c0 !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align:center;
+        padding: 5px 10px 20px 10px;
+        font-size: 16px;
+        .ed{
+            padding: 5px;
+        }
+        .em{
+            font-size: 15px;
+        }
+    }
 }
-.tab.active{
-    height: fit-content;
+.active{
+    color: #00ADB5;
+    max-height: 800px;
+    background: transparent;
+    transition: all 0.6s ease-in-out;
+    .bar{
+        width: 75%;
+        transition: all 0.4s ease-in-out;
+    }
+    .heading{
+        font-weight: bold;
+    }
 }
 
