--- a/src/app/page-contact/page-contact.component.scss
+++ b/src/app/page-contact/page-contact.component.scss
@@ -1,4 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400';
 
 .main {
     height: calc(100vh - 6px);
@@ -7,7 +6,6 @@
     justify-content: center;
     align-items: center;
     color: #FFF;
-    font-size: 1rem;
 }
 
 h1 {
@@ -115,4 +113,22 @@ h3{
     font-size: 1em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: flex-end;
+}
+
+@media screen and (max-width: 750px) {
+    .main{
+        padding: 80px 0;
+        height: auto;
+        font-size: 0.75rem;
+    }
+    h1{
+        font-size: 2em ;
+    }
+    .container{
+        padding: 1em;
+    }
+    .icon>a>button{
+        padding: 0.5em 0;
+    }
+
 }
