--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -1,4 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400';
 
 .main {
     height: calc(100vh - 6px);
@@ -7,6 +6,7 @@
     justify-content: center;
     align-items: center;
     color: #FFF;
+    font-size: 1rem;
 }
 
 h1 {
@@ -62,7 +62,7 @@ h1 {
 }
 
 a {
-    font-size: 1vw;
+    font-size: 1em;
     font-family: "Raleway";
     padding: 1rem;
     height: 100%;
@@ -112,6 +112,9 @@ a {
 }
 
 @media screen and (max-width: 1150px) {
+    .main {
+        font-size: 0.8rem;
+    }
     .project {
         width: 28vw;
     }
@@ -133,6 +136,25 @@ a {
 
     }
     a{
-        font-size: 1.2vw;
+        font-size: 1.2em;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .main{
+        padding: 80px 0;
+        font-size: 0.7rem;
+    }
+    h1{
+        padding-bottom: 2em;
+        font-size: 2em;
+        
+    }
+    .project{
+        min-height: 200px;
+        height: 30em;
+    }
+    .img{
+        width: 100%;
     }
 }
