added mobile about

--- a/src/app/page-about-mobile/page-about-mobile.component.html
+++ b/src/app/page-about-mobile/page-about-mobile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="tabs">
+    <div class="alltabs">
         <div class="tab" id="self" (click)="toggle('self')">
             <div class="heading">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mood-check" width="24"
