--- a/src/app/ham-navbar/ham-navbar.component.scss
+++ b/src/app/ham-navbar/ham-navbar.component.scss
@@ -18,7 +18,7 @@
         0px 2px 10px rgba(0, 0, 0, 0.2),
         0px 0px 8px 0px rgba(0, 0, 0, 0.1),
         inset 0px 7px 20px -8px rgba(131, 131, 131, 0.8);
-    background: rgba(0, 172, 181, 0.15);
+    background: rgba(0, 172, 181);
     backdrop-filter: blur(10px);
     border: 1px solid rgba(0, 172, 181, 0.5);
     transition: box-shadow 0.8s;
@@ -29,7 +29,7 @@
     transition: all 0.5s;
 }
 .active{
-    background: rgba(0, 172, 181, 0.02);
+    background: rgba(0, 172, 181, 0.015);
     max-height: 400px;
     transition: all 0.5s ease-in-out;
 }
@@ -84,7 +84,7 @@ a {
     height: 2px;
     margin: 3px;
     border-radius: 10px;
-    background: #c0c0c0;
+    background: #001e2e;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 li>a:hover,li>a:active,li>a:focus,.active-sec {
