--- a/src/app/page-about-mobile/page-about-mobile.component.scss
+++ b/src/app/page-about-mobile/page-about-mobile.component.scss
@@ -56,6 +56,7 @@ h1 {
         text-align:center;
         padding: 5px 10px 20px 10px;
         font-size: 16px;
+        line-height:1.5em;
         .ed{
             padding: 6px;
         }
