--- a/src/app/page-contact/page-contact.component.scss
+++ b/src/app/page-contact/page-contact.component.scss
@@ -1,6 +1,6 @@
 
 .main {
-    height: calc(100vh - 6px);
+    min-height: calc(100vh - 6px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,7 +13,7 @@ h1 {
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 3em 0;
+    padding: 1rem 0 3rem 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
