--- a/src/app/page-projects/page-projects.component.scss
+++ b/src/app/page-projects/page-projects.component.scss
@@ -1,12 +1,13 @@
 
 .main {
-    height: calc(100vh - 6px);
+    // min-height: calc(100vh - 6px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #FFF;
     font-size: 1rem;
+    padding: 1rem;
 }
 
 h1 {
@@ -14,7 +15,7 @@ h1 {
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 3vw 0;
+    padding: 1rem 0 3rem 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
