--- a/src/app/page-skills/page-skills.component.scss
+++ b/src/app/page-skills/page-skills.component.scss
@@ -1,7 +1,7 @@
 .main {
     padding: 2rem 0;
     margin: 0 auto;
-    height: calc(100vh - 6px);
+    // min-height: calc(100vh - 6px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +15,7 @@
     color: #00ADB5;
     text-align: center;
     font-weight: 800;
-    padding: 0 0 1em 0;
+    padding: 1rem 0 1rem 0;
     text-shadow: 2px 2px 2px #072230,
         2px 4px 3px #00090ea4;
 }
